# python-package-demo

./: .gitignore  README.md  setup.cfg
src/pydemo/: __init__.py  demo.py
