[metadata]
name = pydemo-pkg-rizcodes
version = 0.1.0
author = Mohammed Rizwan
author_email = author@example.com
description = A demo for python packaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/demoproject
project_urls =
    Bug Tracker = https://github.com/pypa/demoproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
